--- a/scss/layout/_resume.scss
+++ b/scss/layout/_resume.scss
@@ -71,9 +71,8 @@ div#resume{
                 align-items: flex-end;
                 border-left: 5px solid #0d10136c;
                 .resume-education-container-column-box{
-                    background-image: $background-color;
+                    background: $background-color;
                     width: 95%;
-                    width: 93%;
                     padding: 2rem;
                     border: $border-radius;
                     margin-bottom: 3rem;
@@ -81,13 +80,16 @@ div#resume{
                     box-shadow: $shadow-1;
                     position: relative;
                     & > p{
-                        border-top: $border;
                         color: $write-color-2;
                         padding: 1rem 0;
-                        font-size: 1.2rem;
-                        max-height: 10ch;
-                        @include transition(color, .5);
+                        margin-bottom: 2rem;
+                        overflow: hidden;
+                        height: auto;
                         line-height: 1.6;
+                        border-top: $border;
+                        font-size: 1.2rem;
+                        max-height: 19ch;
+                        @include transition(color, .5);
                     }
                     &::after{
                         content: "";
@@ -112,7 +114,7 @@ div#resume{
                         }
                     }
                     &:last-child{
-                        margin: 0
+                        margin: 0;
                     }
                     .resume-education-container-column-box-header{
                         display: flex;
